- Applying fix to hide horizontal scrollbar for responsive. (not fixed yet).

--- a/style.css
+++ b/style.css
@@ -215,15 +215,16 @@ p.copyright{
 /* responsive web design for small devices */
 @media screen and(max-width: 1024px){
   .nav-links{
-    width: 60%;
+    width: 50%;
   }
 }
 
 /* responsive web design for small devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   body{
-    /* hide the content that exceed the max width above */
-    overflow-x: : hidden;
+    /* hide horizontal scrollbar that exceed the max width above */
+    position: fixed;
+    overflow-x: hidden;
   }
   .nav-links{
     /* moves the links inside hamburger */
@@ -282,18 +283,6 @@ p.copyright{
     width: 700px;
     height: 1850px;
   }
-  /* .imagebox{
-    display:grid;
-    color: grey;
-    grid-gap: 60px;
-    grid-template-areas:
-    "one two three";
-    width: 768px;
-    height: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 225px;
-    } */
 
   .box1,.box2,.box3{
     height: 800px;
